welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: type mismatch;
 found   : Unit
 required: Int
      return n=n+1}
              ^